updates to PoL neighbour adding function logic and car constructor

--- a/simulations.ipynb
+++ b/simulations.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "import refactoredNaivePoL as npol\n",
-    "def npol_simulation_generator(number_of_simulations:int, Number_of_coerced_cars:int, Number_of_lying_cars:int, Number_of_honest_cars:int, interest_variable:int, variable_list:list):\n",
+    "def npol_simulation_generator(number_of_simulations:int, Number_of_coerced_cars:int, Number_of_lying_cars:int, Number_of_honest_cars:int, interest_variable:int, variable_list:list, threshold):\n",
     "    \"\"\"Simulation generator that takes number of simulations to perform, the three relevant variables. \n",
     "    interest_variable the index corresponding to the variable you want to pick from the variable_list\"\"\"\n",
     "\n",
@@ -200,7 +200,7 @@
     "        density = (London.width * London.height) / total_cars\n",
     "\n",
     "        #Load the PoL algoritm and feed it the initialised objects\n",
-    "        Accuracy, DAG, True_Positive, True_Negative, False_Positive, False_Negative = npol.NaivePoL(cars, 0.5)\n",
+    "        Accuracy, DAG, True_Positive, True_Negative, False_Positive, False_Negative = npol.NaivePoL(cars, threshold)\n",
     "\n",
     "        row = parser(simulation, Number_of_coerced_cars, Number_of_lying_cars, Number_of_honest_cars, density, Accuracy, True_Positive, True_Negative, False_Positive, False_Negative)\n",
     "        \n",
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Oct 11 2022, 21:39:54) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
   },
   "orig_nbformat": 4,
   "vscode": {
