messy code need to clean it

--- a/collaborative-lying simulations.ipynb
+++ b/collaborative-lying simulations.ipynb
@@ -26,41 +26,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars = []\n",
+    "list_cars = i.car_list_generator(800, 100, 100)\n",
+    "cars = [] \n",
+    "\n",
+    "\n",
+    "no_collab_lying_clusters = 10\n",
     "collaboratively_lying_cars = []\n",
     "\n",
-    "Number_of_honest_cars = 800\n",
-    "Number_of_lying_cars = no_lying_cars + lying_cars\n",
-    "Number_of_coerced_cars = no_of_coerced_cars + coerced_cars\n",
+    "for cluster in range(no_collab_lying_clusters):\n",
     "\n",
-    "cars = i.car_list_generator(Number_of_honest_cars, no_lying_cars, no_of_coerced_cars)\n",
-    "collaboratively_lying_cars = i.car_list_generator(0, lying_cars, coerced_cars)\n",
+    "    lying_cars_position = np.random.uniform(0, 0.25, size=(2)).tolist()\n",
+    "\n",
+    "    collaboratively_lying_car_cluster = i.lying_cars_init(6, cars, lying_cars_position)\n",
+    "    \n",
+    "    collaboratively_lying_cars.append(collaboratively_lying_car_cluster)\n",
+    "\n",
+    "collaboratively_lying_cars = [item for sublist in collaboratively_lying_cars for item in sublist]\n",
+    "\n",
+    "print(len(collaboratively_lying_cars))\n",
+    "\n",
+    "data = []\n",
     "\n",
     "\n",
+    "accuracies = []\n",
+    "all_cars_accuracies = []\n",
+    "for dt in range(10):\n",
+    "    dt = dt/100\n",
+    "    all_cars = list_cars + collaboratively_lying_cars\n",
+    "    \n",
     "\n",
-    "total_cars = len(cars + collaboratively_lying_cars)\n",
-    "\n",
-    "London = e.Environment([0,2], [0,2], 0.25)\n",
-    "density = (London.width * London.height) / total_cars\n",
-    "\n",
-    "for dt in range(time_interval):\n",
-    "    data = []\n",
-    "    e.environment_update(cars, dt, London) #dt is 0.1 here\n",
+    "    London = e.Environment([0,2], [0,2], 0.25)\n",
+    "    e.environment_update(list_cars,dt, London)\n",
     "    e.environment_update(collaboratively_lying_cars, dt, London)\n",
+    "    \n",
+    "    density = (London.width * London.height) / len(all_cars)\n",
     "\n",
     "    #Load the PoL algoritm and feed it the initialised objects\n",
-    "    Accuracy, DAG, True_Positive, True_Negative, False_Positive, False_Negative = p.PoL(cars)\n",
+    "    Accuracy, DAG, True_Positive, True_Negative, False_Positive, False_Negative = p.PoL(all_cars)\n",
     "\n",
-    "    row = sim.parser(simulation, Number_of_coerced_cars, Number_of_lying_cars, Number_of_honest_cars, density, Accuracy, True_Positive, True_Negative, False_Positive, False_Negative)\n",
-    "\n",
-    "    data.append(row)\n",
+    "    row = sim.parser(dt, 100, 200, 800, density, Accuracy, True_Positive, True_Negative, False_Positive, False_Negative)\n",
     "    \n",
-    "    simulation_df = pd.DataFrame(data, columns=['Simulation number', 'Percent of coerced cars', 'Percent of lying cars', \n",
-    "    'Percent of honest cars', 'Density', 'Accuracy', 'True Positives', 'True Negatives', 'False Positives', 'False Negatives', \n",
+    "    data.append(row)\n",
+    "        \n",
+    "    simulation_df = pd.DataFrame(data, columns=['Simulation number', 'Percent of coerced cars', 'Percent of lying cars', 'Percent of honest cars', 'Density', 'Accuracy', \n",
+    "    'True Positives', 'True Negatives', 'False Positives', 'False Negatives', \n",
     "    'Percent True Positives', 'Percent True Negatives', 'Percent False Positives','Percent False Negatives'])\n",
     "\n",
-    "    sim_pathfile = sim.save_simulation(simulation_df, path, simulation_id)\n",
-    "\n"
+    "\n",
+    "#print(Accuracy, True_Positive, True_Negative, False_Positive, False_Negative)\n",
+    "    all_cars_accuracies.append(Accuracy)\n",
+    "print(accuracies)\n",
+    "#print(True_Negative, True_Positive, False_Negative, False_Positive)\n"
    ]
   },
   {
@@ -106,6 +122,48 @@
     "        f.write(sim_pathfile+'\\n')\n",
     "        f.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_size = 7\n",
+    "\n",
+    "cars = [] \n",
+    "\n",
+    "for no_of_cars in range(1, cluster_size):\n",
+    "    #print(no_of_cars)\n",
+    "\n",
+    "    collaborative_cluster1 = []\n",
+    "    collaborative_cluster2 = []\n",
+    "\n",
+    "    lying_cars = no_of_cars\n",
+    "    coerced_cars = cluster_size - no_of_cars\n",
+    "\n",
+    "    lying_cars_position = np.random.uniform(0, 0.25, size=(2)).tolist()\n",
+    "\n",
+    "    collaboratively_lying_cars = i.lying_cars_init(lying_cars, collaborative_cluster1, lying_cars_position)\n",
+    "    print('number of lying cars', len(collaboratively_lying_cars))\n",
+    "\n",
+    "    collaborative_coerced_cars = i.coerced_cars_init(coerced_cars, collaborative_cluster2)\n",
+    "    print('number of coerced cars', len(collaborative_coerced_cars))\n",
+    "    \n",
+    "    collaborative_cluster1.append(collaboratively_lying_cars)\n",
+    "    collaborative_cluster2.append(collaborative_coerced_cars)\n",
+    "\n",
+    "    print(len(collaborative_cluster1), len(collaborative_cluster2))\n",
+    "\n",
+    "#collaborative_cluster = [item for sublist in collaborative_cluster for item in sublist]\n",
+    "\n",
+    "#print(collaborative_cluster)\n",
+    "\n",
+    "list_cars = i.car_list_generator(800, 100, 100)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -115,8 +173,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.15 (main, Oct 11 2022, 21:39:54) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
