--- a/final_simulation_generator.ipynb
+++ b/final_simulation_generator.ipynb
@@ -651,7 +651,9 @@
     "    sim_pathfile, totalCars= sim.npol_simulation_generator(number_of_simulations, coerced_cars, lying_cars, honest_cars, interest_variable, variable_list, 0.5)\n",
     "    f=open(\"naivePoL_honest_cars_simulation_pathfiles.txt\", \"a+\")\n",
     "    f.write(sim_pathfile+'\\n')\n",
-    "    f.close()\n"
+    "    f.close()\n",
+    "\n",
+    "#TODO: increase threshold and number of coerced cars"
    ]
   },
   {
